# benchmarking_social_robot_navigation

./: .gitignore  README.md  delete_all.sh  source_bridge.sh  source_ros1.sh  source_ros2.sh
analyse/: analyze.py  path.py
analyse/data/DWA/: .~lock.door_passing.csv#  door_passing.csv
analyse/data/DWA/json/: crossing.json  door_passing_human_pos.json  overtaking.json
analyse/data/HATEB/json/: corner.json  corner_human_pos.json  corner_human_pos_v1.json  corner_v1.json  door_passing.json  door_passing_human_pos.json  frontal.json  frontal_human_pos.json  intersection.json  intersection_human_pos.json  overtaking.json  overtaking_human_pos.json  static.json  static_human_pos.json
analyse/data/MBSN/: corridor.csv
analyse/data/MBSN/json/: corner.json  corner_human_pos.json  corridor.json  door_passing.json  door_passing_human_pos.json  frontal.json  frontal_human_pos.json  intersection.json  intersection_human_pos.json  overtaking.json  overtaking_human_pos.json  static.json  static_human_pos.json
analyse/data/SARL*/json/: door_passing.json  overtaking.json  static.json
analyse/data/TEB/: overtaking.csv  static.csv
analyse/data/TEB/json/: door_passing.json  door_passing_human_pos.json  static.json
analyse/results/analyzes/: results_HATEB_corner.txt  results_HATEB_door_passing.txt  results_HATEB_frontal.txt  results_HATEB_intersection.txt  results_HATEB_overtaking.txt  results_HATEB_static.txt  results_MDP_corner.txt  results_MDP_door_passing.txt  results_MDP_frontal.txt  results_MDP_intersection.txt  results_MDP_overtaking.txt  results_MDP_static.txt  results_data_corner.txt
ros1_ws/src/hateb/bridge_realpeople2hateb/: CMakeLists.txt  package.xml
ros1_ws/src/hateb/bridge_socialsim2hateb/: CMakeLists.txt  package.xml
ros1_ws/src/hateb/bridge_socialsim2hateb/scripts/: bridge.py
ros1_ws/src/msgs/agents_msgs/: CMakeLists.txt  package.xml
ros1_ws/src/msgs/agents_msgs/msg/: Agent.msg
ros1_ws/src/msgs/graph_msgs/: CMakeLists.txt  package.xml
ros1_ws/src/msgs/graph_msgs/msg/: GraphEdge.msg
ros1_ws/src/msgs/metric_msgs/: CMakeLists.txt  package.xml
ros1_ws/src/msgs/metric_msgs/msg/: TrialInfo.msg
ros1_ws/src/msgs/simulation_msgs/: CMakeLists.txt  package.xml
ros1_ws/src/simulation_msgs/: CMakeLists.txt
ros1_ws/src/social_sim_ros/social_sim_ros/: CMakeLists.txt
ros1_ws/src/unity_sim/: CMakeLists.txt  package.xml
ros1_ws/src/unity_sim/launch/: map_publisher.launch  map_server.launch
ros1_ws/src/unity_sim/src/: map_publisher.py
ros2_ws/src/MBSN/: CMakeLists.txt  package.xml
ros2_ws/src/MBSN/launch/: local_nav.launch.py  local_nav_teb.launch.py
ros2_ws/src/MBSN/mbsn/model/graph/: GraphAction.py  GraphState.py  GraphWorld.py
ros2_ws/src/MBSN/mbsn/model/interfaces/: IAction.py  IState.py  IWorld.py
ros2_ws/src/MBSN/mbsn/solver/: ValueIteration.py
ros2_ws/src/MBSN/mbsn/utils/: util.py  visibility_graph.py
ros2_ws/src/MBSN/params/: nav2_params.yaml  nav2_params_teb.yaml
ros2_ws/src/MBSN/scripts/: MBSN.py  graph_visualization.py
ros2_ws/src/ROS-TCP-Endpoint/ros_tcp_endpoint/: server.py
ros2_ws/src/agent_trajectory_prediction/: CMakeLists.txt
ros2_ws/src/agent_trajectory_prediction/msg/: AgentTrajectories.msg
ros2_ws/src/agent_trajectory_prediction/scripts/: agent_trajectory_prediction_publisher.py  agent_trajectory_prediction_visualization.py
ros2_ws/src/graph_nav/: CMakeLists.txt  package.xml
ros2_ws/src/graph_nav/launch/: local_nav2.launch.py  local_nav2_teb.launch.py
ros2_ws/src/graph_nav/msg/: GraphEdge.msg  GraphNode.msg
ros2_ws/src/graph_nav/scripts/: graph_visualization.py  nav_graph.py  nav_graph_goals.py  nav_graph_goals_only_neighbor.py
ros2_ws/src/msgs/agents_msgs/: CMakeLists.txt
ros2_ws/src/msgs/graph_msgs/: CMakeLists.txt  bridge_mapping.yaml  package.xml
ros2_ws/src/msgs/metric_msgs/: CMakeLists.txt
ros2_ws/src/msgs/simulation_msgs/: CMakeLists.txt
ros2_ws/src/unity_sim/: CMakeLists.txt
ros2_ws/src/unity_sim/launch/: map_publisher.launch.py  nav2.launch.py
ros2_ws/src/unity_sim/params/: bridge_params.yaml  nav2_params.yaml
ros2_ws/src/unity_sim/rviz/: config.rviz
ros2_ws/src/unity_sim/scripts/: graph_publisher.py  map_publisher.py  trial_info_listener.py
sim_ws/data/: analyze.py  path.py
sim_ws/data/DWA/: static.csv
sim_ws/data/DWA/json/: door_passing.json  static.json
sim_ws/data/HATEB/: crossing.csv  door_passing.csv  overtaking.csv  static.csv
sim_ws/data/HATEB/json/: crossing.json  door_passing.json  door_passing_human_pos.json  overtaking.json  (+1 more)
sim_ws/data/SARL*/: static.csv
sim_ws/data/TEB/: door_passing.csv
sim_ws/scripts/: bootstrap.sh  checkout.sh  packages.sh
sim_ws/src/basic_ros_navigation/: CMakeLists.txt  package.xml
sim_ws/src/basic_ros_navigation/launch/: move_base_dwa.launch  move_base_teb.launch
sim_ws/src/basic_ros_navigation/params/dwa/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
sim_ws/src/basic_ros_navigation/params/kuri/: base_local_planner_params.yaml  costmap_common_params.yaml
sim_ws/src/basic_ros_navigation/params/kuri/map_nav_params/: local_costmap_params.yaml
sim_ws/src/basic_ros_navigation/params/teb/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
sim_ws/tmux/sean/: .tmuxinator.yml
sim_ws/tmux/sean_dwa/: .tmuxinator.yml
sim_ws/tmux/sean_hateb/: .tmuxinator.yml
sim_ws/tmux/sean_teb/: .tmuxinator.yml
social_sim_unity/Assets/Resources/: ROSConnectionPrefab.prefab
social_sim_unity/Assets/Scenes/: crossing.unity  door_passing.unity  overtaking.unity  static_human.unity
social_sim_unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  NavMeshAreas.asset
tmux/MBSN/: .tmuxinator.yml
tmux/hateb/: .tmuxinator.yml
unity_sim/Assets/: msgbrowser_settings.asset
unity_sim/Assets/Scenes/: complete.unity  corner.unity  crossing.unity  door_passing.unity  frontal.unity  open.unity  overtaking.unity  static_human.unity  test.unity
unity_sim/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+124 files in other folders)
