<?xml version="1.0"?>
<package format="2">
  <name>unity_sim</name>
  <version>0.1.0</version>
  <description>The social_sim_ros package</description>

  <maintainer email="adam.gouguet@imt-nord-europe.fr">Adam Gouguet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>map_server</exec_depend>

</package>
