<?xml version="1.0"?>
<package format="2">
  <name>basic_ros_navigation</name>
  <version>0.1.0</version>
  <description>Basic ROS Navigation</description>

  <maintainer email="adam.gouguet@imt-nord-europe.fr">Adam Gouguet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>social_navigation_layers</exec_depend>

</package>
