<?xml version="1.0"?>
<package format="2">
  <name>bridge_socialsim2hateb</name>
  <version>0.0.0</version>
  <description>The bridge_socialsim2hateb package</description>

  <maintainer email="adam.gouguet@imt-nord-europe.fr">Adam Gouguet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
